--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     },
     "devDependencies": {
         "@types/node": "^20.2.1",
+        "@types/random-seed": "^0.3.3",
+        "@types/xmldom": "^0.1.31",
         "ts-node": "^10.9.1",
         "typescript": "^5.0.4"
     },
     "dependencies": {
-        "@svgdotjs/svg.js": "^3.1.2",
-        "svgdom": "^0.1.14"
+        "random-seed": "^0.3.0",
+        "roughjs": "^4.5.2",
+        "xmldom": "^0.6.0"
     }
 }
